--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,6 +29,14 @@
     dest=/etc/exports
   notify: restart heartbeat
 
+- name: Configure NFS mountd
+  lineinfile:
+    dest=/etc/default/nfs-kernel-server
+    regexp='^RPCMOUNTDOPTS(.*)(?<!(--port 4001))$'
+    line='RPCMOUNTDOPTS\1 --port 4001'
+    backrefs=yes
+  notify: restart heartbeat
+
 - name: Create data directory
   file:
     path=/data
