Replaced inter-device mv with recursive copy and remove. Resolves #2367

--- a/tasks/on_primary.yml
+++ b/tasks/on_primary.yml
@@ -14,7 +14,7 @@
   notify: restart heartbeat
 
 - name: Move the NFS metadata to the DRBD device
-  shell: mv /var/lib/nfs/ /data/
+  shell: cp -r /var/lib/nfs/ /data/ && rm -rf /var/lib/nfs/
   when: stats.stat.isdir
   notify: restart heartbeat
 
